--- a/docs/01-setup.qmd
+++ b/docs/01-setup.qmd
@@ -1,104 +1,78 @@
 ---
-title: "1. Essential Software"
+title: "Setting up a Project"
 subtitle: "Fundamentals of Data Science"
 author: "Jeremy Teitelbaum"
-format: 
-    revealjs:
-        theme: default
+format: revealjs
 title-block-style: plain
 ---
 
-## Essential Software
+# Key Software Tools
 
-- the [anaconda](http://www.anaconda.com) distribution including python v3.10 or higher
-- the [vscode](http://code.visualstudio.com) development environment
-- the [R](https://cran.wustl.edu/) language
-- the [Rstudio](https://posit.co/download/rstudio-desktop/) integrated development environment
+## Anaconda Install for Python
 
-## Anaconda
+- Download from 
+[https://www.anaconda.com](https://www.anaconda.com)
 
-Anaconda is a data science software package that includes:
+Anaconda includes:
 
-- An up-to-date version of the `python` language. 
+- python
+- jupyter: notebook working environment
+- python libraries: ML, visualization, I/O and others
+- conda package manager: for dealing with multiple versions of libraries
+- anaconda navigator: a GUI gateway to anaconda tools
+- lots of other stuff
 
-- A package manager (`conda`) for managing python libraries, and a collection of those libraries
+## Verify Anaconda
 
-- A GUI interface (`anaconda-navigator`) for launching many of the data science tools.
+- Verify JupyterLab
 
-- You can install other tools (such as `R` and `Rstudio`) through `anaconda-navigator` but we won't go that route.
-
-## Anaconda Setup
-
-1. Download the [appropriate anaconda package](https://www.anaconda.com/download#downloads) for your operating system.
-
-2. Run the installer. 
-
-3. Start anaconda-navigator to verify that it was installed.
-
-4. Run an instance of `JupyterLab` to verify that it starts properly.
-
-## Anaconda Navigator
-
-![](img/navigator.png)
-
-## VSCode
-
-`VSCode`, or "Visual Studio Code", is a powerful code editor developed by Microsoft.  
-
-It offers many tools to help write and maintain code and text.
-
-1. Download and install vscode from the [home page](http://code.visualstudio.com).
-
-2. Start `VSCode` to make sure that it works. Use the start menu (on Windows), the finder (on MacOS), or
-open a shell window and type:
-
+From a command line
 ```bash
-$ code 
+$ jupyter lab 
+```
+or use anaconda navigator to launch jupyterlab.
+
+- Verify python version
+
+From a command line
+```bash
+$ python --version
+```
+or inside a jupyter notebook cell:
+```python
+import sys
+print(sys.version)
 ```
 
-## VSCode
+## R and Rstudio Install for R
 
-![](img/vscode.png)
+- R is an open source language for statistical computations.
+- Rstudio is a working environment for the R language.
+- R and Rstudio need to be installed separately.
 
+- R is available at [https://cran.r-project.org](https://cran.r-project.org)
+- Rstudio is available at [https://posit.co/download/rstudio-desktop](https://posit.co/download/rstudio-desktop)
 
-## R 
+## Verify R and Rstudio
 
-`R` is a programming language that is highly optimized for statistical modeling.  
-
-Install `R` by following the instructions on the [home page](https://cran.wustl.edu/).
-
-## R
-
-Verify that `R` works by starting it:
-
-- On MacOS, there is a graphical version of `R` called `R.app`
-
-- The installation process on Windows creates a desktop shortcut to start `R.`
-
-- On Linux, you start `R` from a desktop shortcut or the command line 
-
+For R, From a command line:
 ```bash
 $ R 
 ```
 
-Note that you quit `R` with 
-
-```R
-> q()
-```
-
-## Rstudio
-
-`Rstudio` is a development environment for `R` (and for other languages if you prefer it).
-
-Install `Rstudio` from the  [home page](https://posit.co/download/rstudio-desktop/).
-
-Start `Rstudio` by double clicking a shortcut on Windows or Mac, or from the command line:
-
+For Rstudio, use the icon/shortcut or from a command line:
 ```bash
-$ rstudio
+$ rstudio 
 ```
 
-## Rstudio
+## Setting up a Project
 
-![](img/rstudio.png)
+- Create a project directory
+- Subdirectories
+    - data for data files
+    - docs for notes and documentation
+    - others?
+
+Use the finder or the command line
+
+
