--- a/docs/02-JupyterWalkthrough/notebooks/JupyterWalkthrough.ipynb
+++ b/docs/02-JupyterWalkthrough/notebooks/JupyterWalkthrough.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8320583b-2758-4d51-9e21-64a1f97875b8",
    "metadata": {
@@ -15,6 +16,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6da757be-a0f1-4522-896d-c3c2a6cc5a70",
    "metadata": {},
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "196cd4f7",
    "metadata": {},
    "outputs": [],
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "53cdd451",
    "metadata": {},
    "outputs": [
@@ -129,8 +131,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "759f5a11",
+   "metadata": {},
+   "source": [
+    "Compare `print` for multiline strings with the string value. (\\\\n means newline)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "65fc3ab0",
    "metadata": {},
    "outputs": [
@@ -145,6 +157,27 @@
    ],
    "source": [
     "print(paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d3ec04f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is how you enter a multiline string\\nin python. It is enclosed in triple quotes.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paragraph"
    ]
   },
   {
@@ -695,6 +728,112 @@
    "source": [
     "math.pi == pi"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "087082d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "0f1cfaa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.pia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c82e04ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.randint(0,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "b30e9d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "567791e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.random import randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "441b505a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randint(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfa38fff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
