added basic plotting

--- a/docs/02-JupyterWalkthrough/02-jupyter-walkthrough.qmd
+++ b/docs/02-JupyterWalkthrough/02-jupyter-walkthrough.qmd
@@ -54,6 +54,7 @@ print("Hello World!")
 7. Operations on strings and lists
 8. Slicing
 9. Libraries
+10. matplotlib plotting (bare minimum)
 
 
 ## Some other things to look at
