some empirical stuff

--- a/docs/05-Probability/notebooks/empirical.qmd
+++ b/docs/05-Probability/notebooks/empirical.qmd
@@ -5,15 +5,18 @@ library(gridExtra)
 ```
 
 ```{r}
-adelie <- penguins |> 
-    filter(`species`=="Adelie") |>
+adelie <- penguins |>
+    filter(`species` == "Adelie") |>
     drop_na()
 ```
 
 ```{r}
-hist<-ggplot(data=adelie)+geom_histogram(aes(x=`bill_length_mm`,y=after_stat(density)),binwidth=.2,color='white',fill='blue',alpha=.5)+
-labs(x="Bill Length (mm)",y="Density", title="Histogram")
-ecdf <-ggplot(data=adelie)+stat_ecdf(aes(x=`bill_length_mm`),color='red')+labs(x="Bill Length (mm)",y="Cumulative Density", title="ECDF")
+hist <- ggplot(data = adelie) +
+    geom_histogram(aes(x = `bill_length_mm`, y = after_stat(density)), binwidth = .2, color = "white", fill = "blue", alpha = .5) +
+    labs(x = "Bill Length (mm)", y = "Density", title = "Histogram")
+ecdf <- ggplot(data = adelie) +
+    stat_ecdf(aes(x = `bill_length_mm`), color = "red") +
+    labs(x = "Bill Length (mm)", y = "Cumulative Density", title = "ECDF")
 
-grid.arrange(hist,ecdf,ncol=2)
+grid.arrange(hist, ecdf, ncol = 2)
 ```
