--- a/docs/06-PythonAndR/notebooks/pandas.qmd
+++ b/docs/06-PythonAndR/notebooks/pandas.qmd
@@ -235,7 +235,32 @@ penguins['Sex']
 One can also pass a dictionary setting the types of columns as an argument when
 you read them from the csv file.
 
+## Creating new columns 
 
+
+Simplifying the species name.
+
+```{python}
+def first_word(x):
+    return x.split()[0]
+penguins['SimpleSpecies'] = penguins['Species'].map(first_word)
+```
+
+Rewriting the body mass in kilograms.
+
+```{python}
+penguins['Body Mass (kg)'] = penguins['Body Mass (g)']/1000
+```
+
+## Sorting
+
+```{python}
+penguins.sort_values('Body Mass (g)')
+# ascending = False for descending order
+# na_position = 'first' or 'last' (default is 'last')
+# can also provide a key which is a function of prototype Series -> Series
+# inplace = True doesn't return a new dataframe, sorts the given one in place
+```
 
 
 ## Grouping
