--- a/docs/06-PythonAndR/pythonAndR.qmd
+++ b/docs/06-PythonAndR/pythonAndR.qmd
@@ -32,6 +32,8 @@ The basic operations that both R and Python offer are
 - *grouping* rows by keys 
 - *summarizing* data by computing sums, counts, averages, variances, and so on.
 
+## Visualization
+
 In addition, both R and Python have plotting libraries that rely on dataframes/tibbles as input and libraries that apply ML algorithms to tabular data stored in dataframes/tibbles.
 
 
