moving things around

--- a/docs/01-SettingUp/01-setup.qmd
+++ b/docs/01-SettingUp/01-setup.qmd
@@ -127,6 +127,9 @@ to sign in to that account from inside vscode.
     - R
     - many others
 - The command palette
+
+## More on vscode
+
 - jupyter notebooks inside vscode with github copilot
 - Interactive python with code cells (# %%)
 - The terminal
