--- a/docs/03-R-Walkthrough/notebooks/RstudioNotebookWalkthrough.Rmd
+++ b/docs/03-R-Walkthrough/notebooks/RstudioNotebookWalkthrough.Rmd
@@ -20,17 +20,17 @@ In R, the assignment operator is <-, not =.  This takes some getting used to.
 
 ```{r}
 count <- 5
-name <- 'Jeremy Teitelbaum'  # string types are called chr for character
-paragraph<-'Far across the misty mountains cold,
+name <- "Jeremy Teitelbaum" # string types are called chr for character
+paragraph <- "Far across the misty mountains cold,
 to dungeons deep and caverns cold,
 we must away,
 ere break of day
-to seek our long forgotten gold.'
-pi <- 3.14159 # R doesn't use integer types unless you force it to, numbers are "num"
+to seek our long forgotten gold."
+pi <- 3.14159 # R doesn't use integer types unless you force it to, numbers are "num" # nolint: line_length_linter.
 epsilon <- 1e-6
 count <- 5L # this forces an integer
-students <- c("Jeremy", "Phillip","Sara", "Molly")
-HotDog <- TRUE  #note all caps unlike Python; false is FALSE
+students <- c("Jeremy", "Phillip", "Sara", "Molly")
+hot_dog <- TRUE # note all caps unlike Python; false is FALSE
 ```
 In R, you can give names to the elements of a vector.
 ```{r}
@@ -38,8 +38,8 @@ print("hello")
 ```
 
 ```{r}
-names(students)<-c("President", "Vice President", "Treasurer", "Secretary")
-print(names(students))   
+names(students) <- c("President", "Vice President", "Treasurer", "Secretary")
+print(names(students))
 print(students["President"])
 print(students)
 ```
@@ -50,21 +50,20 @@ The cat command is a print command that "concatenates" its arguments; it needs a
 ```{r}
 print(students)
 print(count)
-cat("Students:", students,"\n")
+cat("Students:", students, "\n")
 print(epsilon)
-cat("The value of epsilon is:", epsilon,"\n")
+cat("The value of epsilon is:", epsilon, "\n")
 print(paragraph)
 cat(paragraph)
-
 ```
 The [1] at the beginning of each of these things reflects the fact that in R *everything is a vector*.  So it is telling you that the first thing there is element 1 of the vector.
 
 The c() command makes a vector of its arguments.  It forces everything to be of the same type.
 
 ```{r}
-strList <- c("Jeremy", 25, 1.34, FALSE) # everything becomes a string
-intList <- c(1,2,3,4,5) 
-floatList <- c(1,2,3.5,4)
+str_list <- c("Jeremy", 25, 1.34, FALSE) # everything becomes a string
+int_list <- c(1, 2, 3, 4, 5)
+float_list <- c(1, 2, 3.5, 4)
 ```
 ## Arithmetic
 
@@ -72,100 +71,100 @@ R does all arithmetic on vectors/lists.  It one is shorter than the other, it re
 
 ```{r}
 a <- 1
-b<- 2
-a+b
+b <- 2
+a + b
 ```
 
 ```{r}
-a<- c(1,2,3,4,5)
-b<- 4
-a+b
+a <- c(1, 2, 3, 4, 5)
+b <- 4
+a + b
 ```
 
 ```{r}
-a<-c(1,2,3,4,5,6)
-b<-c(10,11)
-a+b
+a <- c(1, 2, 3, 4, 5, 6)
+b <- c(10, 11)
+a + b
 ```
 
 ```{r}
-a<-c(1,2,3,4,5)
-b<-c(1,2)
-a+b
+a <- c(1, 2, 3, 4, 5)
+b <- c(1, 2)
+a + b
 ```
 
 ```{r}
-a/5
+a / 5
 ```
 
 ```{r}
 # integer division (// in python)
-a<-5L
-b<-3
-a%/%b
+a <- 5L
+b <- 3
+a %/% b
 ```
 
 ```{r}
 # remainder (% in python)
-a<-5
-b<-3
-a%%b
+a <- 5
+b <- 3
+a %% b
 ```
 
 ```{r}
-a<-c(1,2,3,4,5)
+a <- c(1, 2, 3, 4, 5)
 a^2
 ```
 
 ```{r}
-print(a^2==a)
-print(a^2>a)
-print(a^2==4)
+print(a^2 == a)
+print(a^2 > a)
+print(a^2 == 4)
 ```
 ## Operations on strings and lists
 
 ```{r}
-firstName <- 'Jeremy'
-lastName <- 'Teitelbaum'
-nchar(firstName)
+first_name <- "Jeremy"
+last_name <- "Teitelbaum"
+nchar(first_name)
 ```
 
 ```{r}
-paste(firstName, lastName) # spaces by default
+paste(first_name, last_name) # spaces by default
 ```
 
 ```{r}
-paste(firstName, lastName,sep="") # no space
+paste(first_name, last_name, sep = "") # no space
 ```
 
 ```{r}
-paste(c(1,2,3),"Jeremy") # remember functions work across vectors
+paste(c(1, 2, 3), "Jeremy") # remember functions work across vectors
 ```
 ## Substrings
 
 In R, **you always count from 1** (big difference from python)
 ```{r}
-firstName[1] # another difference from Python
+first_name[1] # another difference from Python
 ```
 ```{r}
-a<-substr("Jeremy", 1,1)
-b<-substr("Jeremy", 1,3)
-cat(a,b, paste(a,b,sep=""))
+a <- substr("Jeremy", 1, 1)
+b <- substr("Jeremy", 1, 3)
+cat(a, b, paste(a, b, sep = ""))
 ```
 ## Slicing lists
 
 ```{r}
 nums <- 0:10 # generates a sequence from 0 to 10 INCLUSIVE (compare python)
 print(nums)
-print(nums[c(1,3)]) # you can pass a list of indices to a subscript 
+print(nums[c(1, 3)]) # you can pass a list of indices to a subscript
 ```
 ```{r}
 sqrs <- nums^2
-sqrs[seq(1,10,2)]
+sqrs[seq(1, 10, 2)]
 ```
 In R, negative numbers in seq mean "omit" so this means omit entries 2 through 5. You can't mix positive and negative numbers
 ```{r}
-rev <- nums[seq(-2,-5)]
+rev <- nums[seq(-2, -5)]
 print(rev)
 ```
 ```{r}
@@ -191,29 +190,29 @@ library(ggplot2)
 
 
 ```{r}
-x<-seq(-10,10,.1)
-y<-x**2
-data <- tibble("x"=x,"y"=y)
+x <- seq(-10, 10, .1)
+y <- x**2
+data <- tibble("x" = x, "y" = y)
 ```
 
 ```{r}
-ggplot(data=data,aes(x=x)) +
-  geom_point(aes(y=y),color="red") +
-  ggtitle("A Parabola") + 
-  scale_x_continuous(breaks=seq(-10,10,1)) + 
-  scale_y_continuous(breaks=seq(0,100,20))
+ggplot(data = data, aes(x = x)) +
+  geom_point(aes(y = y), color = "red") +
+  ggtitle("A Parabola") +
+  scale_x_continuous(breaks = seq(-10, 10, 1)) +
+  scale_y_continuous(breaks = seq(0, 100, 20))
 ```
 
 
 
 ```{r}
-x<-seq(-10,10,.1)
-y<-cos(x)
-data <- tibble("x"=x,"y"=y)
-ggplot(data=data,aes(x=x)) +
-  geom_line(aes(y=y),color='darkgreen') +
-  ggtitle("A Cosine Curve") + 
-  scale_x_continuous(breaks=seq(-10,10,1)) + 
-  scale_y_continuous(breaks=seq(-1,1,5))
+x <- seq(-10, 10, .1)
+y <- cos(x)
+data <- tibble("x" = x, "y" = y)
+ggplot(data = data, aes(x = x)) +
+  geom_line(aes(y = y), color = "darkgreen") +
+  ggtitle("A Cosine Curve") +
+  scale_x_continuous(breaks = seq(-10, 10, 1)) +
+  scale_y_continuous(breaks = seq(-1, 1, 5))
 ```
 
